--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,17 +1,18 @@
+  
   <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
       <span class="sr-only">Toggle navigation</span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/"><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/marketnew/assets/image.png", :class => 'navlogo'), root_path %></a>
+   <a class="navbar-brand" href="/"><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/marketnew/assets/image.png", :class => 'navlogo'), root_path %></a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="nav_ops">
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><%= link_to "About", pages_about_path %></li>
       <li><%= link_to "Contact", pages_contact_path %></li>
@@ -19,17 +20,17 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
-      
-            <li><%= link_to "Manage Your Products", vendor_path %></li>
+            <li><%= link_to "Manage Listings", vendor_path %></li>
+            <li><%= link_to "Sales History", sales_path %></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.profile.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            
+            <li><%= link_to "Purchase History", purchases_path %></li>
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           </ul>
@@ -41,4 +42,3 @@
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
-
