--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <h2>
-  <%= @category.name %>
+  <%= @tag.name %>
 </h2>
 
 <div class="col-md-12">
@@ -21,7 +21,7 @@
           <div class="caption">
             <h3><%= product.title %></h3>
             <p><%= number_to_currency(product.price) %></p>
-            <p><em>Sold By:</em> <%= product.profile.username %></p>
+            <p><em>Sold By:</em> <%= product.user.email %></p>
           </div>
         </div>
       </div>
