--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,9 +11,37 @@
     <p><%= number_to_currency(@product.price) %></p>
     <p><%= @product.description %></p>
     <p><em>Tags:<em> <%= raw @product.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %></p>
-    <div class="center">
-      <%= link_to "Buy It Now", new_product_order_path(@product), class: "btn btn-primary", data: { no_turbolink: true %>
-    </div>
+    <p class="mt-5">
+                  <%= form_tag charges_path do %>
+
+                    <%= hidden_field_tag "product_id", @product.id %>
+
+                    <%= select_field :quantity, options_for_select([1,2,3]) %> 
+
+                    <article>
+                      <% if flash[:error].present? %>
+                        <div id="error_explanation">
+                          <p><%= flash[:error] %></p>
+                        </div>
+                      <% end %>
+                    </article>
+
+
+                    <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                            data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                            data-description="<%= @product.title %>"
+                            data-amount="<%= (@product.price + @product.shipping_cost) * 100 %>"
+                            data-billing-address="true"
+                            data-shipping-address="true"
+                            <% if user_signed_in? %>
+                              data-email="<%= current_user.email %>"
+                            <% end %>
+                            data-allow-remember-me="true"
+                            data-locale="auto">
+
+                    </script>
+                <% end %>
+    </p>
   </div>
   
 </div>
