--- a/app/views/profiles/_form_edit.html.erb
+++ b/app/views/profiles/_form_edit.html.erb
@@ -84,7 +84,7 @@
             <%= form.label :bio, class: "pt-1 font-weight-bold" %>
           </div>
           <div class="col-8">
-            <%= form.text_field :bio, id: :profile_bio, class: "width-large p-1 rounded" %>
+            <%= form.area_field :bio, id: :profile_bio, class: "width-large p-1 rounded" %>
           </div>
         </div mt-3>
 
