--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -22,13 +22,14 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
+            <li><%= link_to "View Profile", profile_path(current_user) %></li>
             <li><%= link_to "Manage Listings", vendor_path %></li>
             <li><%= link_to "Sales History", sales_path %></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.profile.username %> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Purchase History", purchases_path %></li>
             <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
