--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -4,15 +4,19 @@
       <%= form_for @product, url: "#{products_path}", html: { multipart: true } do |form| %>
         <% if product.errors.any? %>
           <div id="error_explanation">
-            <h2><%= pluralize(book.errors.count, "error") %> prohibited this product from being saved:</h2>
+            <h2><%= pluralize(product.errors.count, "error") %> prohibited this product from being saved:</h2>
 
             <ul>
-            <% book.errors.full_messages.each do |message| %>
+            <% product.errors.full_messages.each do |message| %>
               <li><%= message %></li>
             <% end %>
             </ul>
           </div>
         <% end %>
+
+          <div id="stripe_error" class="alert alert-danger" style="display:none">
+              <noscript>JavaScript is not enabled and is required for this form. First enable it in your web browser settings.</noscript>
+          </div>
 
 
         <div class="form-group">
@@ -83,11 +87,15 @@
             <%= form.file_field :image, class: "form-control" %>
           </div>
         </div> 
+
         <div class="actions row mt-5 mb-3">
           <div class="col d-flex justify-content-center">
             <%= form.submit %>
           </div>
         </div>
+
+
+
       <% end %>
 
     </div>
