--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -42,7 +42,7 @@
 
      
                
-                <p><em>Sold By:</em> <%= product.user.email %></p>
+                <p><em>Sold By:</em> <%= link_to product.user.profile.username, profile_path(current_user) %></p>
                 <p><em>Tags:<em> <%= raw product.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %></p>
               </div>
             </div>
