--- a/app/views/profiles/_form_new.html.erb
+++ b/app/views/profiles/_form_new.html.erb
@@ -85,9 +85,19 @@
             <%= form.label :bio, class: "pt-1 font-weight-bold" %>
           </div>
           <div class="col-8">
-            <%= form.text_field :bio, id: :profile_bio, class: "width-large p-1 rounded" %>
+            <%= form.text_area :bio, id: :profile_bio, class: "width-large p-1 rounded" %>
           </div>
         </div mt-3>
+
+        
+        <div class="field row mt-3">
+          <div class="col-3">
+            <%= form.label :avatar, class: "pt-1 font-weight-bold" %>
+          </div>
+          <div class="col-8">
+            <%= form.file_field :avatar, class: "width-large p-1 rounded" %>
+          </div>
+        </div>
 
 
         <div class="actions row mt-5 mb-3">
