--- a/app/views/profiles/connect_stripe.html.erb
+++ b/app/views/profiles/connect_stripe.html.erb
@@ -2,7 +2,7 @@
   <div class="row m-5 text-center">
     <div class="col bg-white p-4">
       <h1 class="font-heading">Thanks for connecting with stripe!</h1>
-      <h3 class="mt-4 font-body">You can now get paid when you sell products :D</h3>
+      <h3 class="mt-4 font-body">You can now get paid when you sell books :D</h3>
     </div>
   </div>
 </div>
