--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -81,7 +81,7 @@
 
         <div class="form-group mt-3">
          <div class="col-3">
-            <%= form.label :image, class: "pt-1 font-weight-bold" %>
+            <%= form.label :image %>
           </div> 
          <div class="col-8">
             <%= form.file_field :image, class: "form-control" %>
