--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,7 +18,7 @@
 
   <!-- if current user show "connect with stripe button, otherwise show "message reader" button -->
  
-    <% if @profile.user.uid != present? %>
+    <% if @profile.user.uid != !present? %>
       <% if @profile.user.id == current_user.id %>
         <div class="panel panel-default">
           <div class="panel-header text-center">
