--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -50,7 +50,7 @@
 
         <div class="form-group">
           <div class="col-3">
-            <%= form.label :postage_cost, class: "font-weight-bold" %>
+            <%= form.label :shipping_cost, class: "font-weight-bold" %>
           </div>
           <div class="form-group">
             <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
