--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -53,7 +53,7 @@
 
         <div class="form-group mt-3">
           <div class="col-3">
-            <%= form.label :postage_cost, class: "pt-1 font-weight-bold" %>
+            <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
           </div>
           <div class="col-8">
             <%= form.number_field :shipping_cost, id: :product_shipping_cost, step: 0.01, class: "form-control" %>
