--- a/app/views/business_categories/index.html.erb
+++ b/app/views/business_categories/index.html.erb
@@ -13,10 +13,10 @@
   <tbody>
     <% @business_categories.each do |business_category| %>
       <tr>
-        <td><%= business_category.name %></td>
-        <td><%= link_to 'Show', business_category %></td>
-        <td><%= link_to 'Edit', edit_business_category_path(business_category) %></td>
-        <td><%= link_to 'Destroy', business_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+        <td><%= link_to(business_category.name, business_category) %></td>
+        
+
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +24,3 @@
 
 <br>
 
-<%= link_to 'New Business Category', new_business_category_path %>
