--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -58,8 +58,8 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :picture %>
-    <%= form.file_field :picture, class: "form-control" %>
+    <%= form.label :image %>
+    <%= form.file_field :image, class: "form-control" %>
   </div>
 
   <div class="actions">
