--- a/app/views/businesses/_search_form.html.erb
+++ b/app/views/businesses/_search_form.html.erb
@@ -1,22 +1,25 @@
-	<%= form_tag(products_path, method: :get) do %>
 	<div class="row center">
-	
+	<%= search_form_for @q, html: { class: "form-group" } do |f| %>
 		<div class="col-md-8 offset-md-3" style="margin-left: 15%">
-		  <%= text_field_tag :search,
-		  		params[:search], 
-		  		# id: 'listing_search', 
-		  		placeholder: 'Search',
-		  		class: 'form-control'
-			%>
+			
+			
+			<%= f.search_field :title_or_description_or_city_or_email_cont, class: "form-control", placeholder: "Search..." %>
 
+			
 		
 		</div>
+		
 		<div >
 			<%= submit_tag 'Search', name: nil, class: 'btn btn-primary' %>
 		</div>
 
-
-	</div>
 	<% end %>
-	
+
+</div>
+<div class="row center">
+	<div class="col-md-8 offset-md-3" style="margin-left: 15%">
+		<em>Recommended Search: Name, Type, State (eg. NY), City</em>
+	</div>
+</div>
+		
 	
