--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,8 +1,61 @@
 <p id="notice"><%= notice %></p>
 
+<div class="form-group">
+      <%= render 'search_form' %>
+</div>
+
+<div class="row">
+	<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
+</div>
+<div class="usa" id="map"></div>
+
+<div class="col-md-8">
+	  	<table class="table table-striped table-bordered">
+			
+	  		<tr>
+			    <th class="center">Image</th>
+			    <th class="center">Name</th>
+			    <th class="center">Description</th>
+			    <th class="center">Owner</th>
+			    <th class="center">City</th>
+			</tr>
+			
+			<% @businesses.each do |business| %>
+
+			<tr>
+				<th>
+					<%= link_to business do %>
+	       				<%= image_tag(business.image.url(:thumb), :class => "thumbs") %>
+	    			<% end %>
+				</th>
+
+				<th>
+					<h3><%= business.title %></h3>
+				</th>
+
+				<th>
+					<p><%= business.description %></p>
+				</th>
+
+				<th>
+					<strong><p><em>Owner:</em> <%= link_to business.user.profile.username, profile_path(current_user) %></p></strong>
+				</th>
+
+				<th>
+					<p> <%= business.city %></p>
+				</th>
+
+						
+			</tr>
+
+			<% end %> 
+	  	</table>
+	   
+	  </div>
+	
+
 <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
 <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 
-<div class="" id="map"></div>
 
-<%= link_to 'New Business', new_business_path %>
+	<%= link_to 'Add Your Business', new_business_path %>
