--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
   <div class="col-md-6">
-    <%= image_tag @business.picture(:medium) %> 
+    <%= image_tag @business.image(:medium) %> 
   </div>
 
 <p>
@@ -12,6 +12,10 @@
 <p>
   <strong>Description:</strong>
   <%= @business.description %>
+</p>
+
+<p>
+<%= link_to( @business.business_category.name, business_category_path) %>
 </p>
 
 <p>
