--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -9,24 +9,42 @@
 <h2>
   <%= @state.name %>
 </h2>
+<div class="row">
+      <div class="col-md-3">
+            <table>
+              <thead>
+                <tr>
+                  <th>Category</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
 
-<div class="col-md-12">
-	<% @businesses.each do |business| %>
-
-		<div class="col-md-3">
-        <div class="thumbnail">
-        <%= link_to business do %>
-            <%= image_tag(business.image.url(:thumb), :class => "thumbs") %>
-        <% end %>
-          <div class="caption">
-            <h3><%= business.title %></h3>
-            <p><%= number_to_currency(business.price) %></p>
-            <p><em>Sold By:</em> <%= business.profile.username %></p>
-          </div>
-        </div>
+              <tbody>
+                <% @business_categories.each do |business_category| %>
+                  <tr>
+                    <td><%= link_to(business_category.name, business_category) %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
       </div>
+    <div class="col-md-7">
+    	<% @businesses.each do |business| %>
 
-	<% end %>
+    		<div class="col-md-3">
+            <div class="thumbnail">
+            <%= link_to business do %>
+                <%= image_tag(business.picture.url(:thumb), :class => "thumbs") %>
+            <% end %>
+              <div class="caption">
+                <h3><%= business.title %></h3>
+              
+              </div>
+            </div>
+          </div>
+
+    	<% end %>
+    </div>
 </div>
 <div class="row">
   <% if user_signed_in? %>
