--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -28,7 +28,7 @@
 
 
   <div class="form-group">
-    <%= form.label :address %>
+    <%= form.label :business_address %>
     <%= form.text_field :address, id: :business_address, class: "form-control" %>
   </div>
 
@@ -43,17 +43,17 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :email %>
+    <%= form.label :business_email %>
     <%= form.text_field :email, id: :business_email, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :hours %>
-    <%= form.text_field :hours, id: :business_hours, class: "form-control" %>
+    <%= form.label :business_hours %>
+    <%= form.text_area :hours, id: :business_hours, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= form.label :number %>
+    <%= form.label :business_number %>
     <%= form.text_field :number, id: :business_number, class: "form-control" %>
   </div>
 
