--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -18,7 +18,7 @@
 
   <!-- if current user show "connect with stripe button, otherwise show "message reader" button -->
  
-    <% if @profile.user.uid != present? %>
+    <% if @profile.user.uid == !present? %>
       
 
       <% if @profile.user.id == current_user.id %>
@@ -106,7 +106,7 @@
       <div class="col">
         <div class="row">
           <div class="col-6">
-            <#= image_tag product.product_image.url(:medium), class: "product-overview-image" %>
+            <%= image_tag product.image.url(:medium), class: "product-overview-image" %>
           </div>
           <div class="col-6 text-center">
             <h4 class="font-heading pt-2">
