--- a/app/views/states/_search_form.html.erb
+++ b/app/views/states/_search_form.html.erb
@@ -1,4 +1,4 @@
-	<%= form_tag(products_path, method: :get) do %>
+	<%= form_tag(businesses_path, method: :get) do %>
 	<div class="row center">
 	
 		<div class="col-md-8 offset-md-3" style="margin-left: 15%">
