--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -9,41 +9,54 @@
 <h2>
   <%= @state.name %>
 </h2>
-<div class="row">
-      <div class="col-md-3">
-            <table>
-              <thead>
-                <tr>
-                  <th>Category</th>
-                  <th colspan="3"></th>
-                </tr>
-              </thead>
 
-              <tbody>
-                <% @business_categories.each do |business_category| %>
-                  <tr>
-                    <td><%= link_to(business_category.name, business_category) %></td>
-                  </tr>
-                <% end %>
-              </tbody>
-            </table>
-      </div>
-    <div class="col-md-7">
-    	<% @businesses.each do |business| %>
+<%= form_tag('businesses', :remote => true) do %>
+  <%= select_tag "category", options_from_collection_for_select(BusinessCategory.all, "id", "name"),  { :include_blank => true , :class => "product_select"} %>
+  <%= submit_tag 'Filter' %>
+<% end %>
 
-    		<div class="col-md-3">
-            <div class="thumbnail">
-            <%= link_to business do %>
-                <%= image_tag(business.picture.url(:thumb), :class => "thumbs") %>
+    <div class="col-md-8">
+      <table class="table table-striped table-bordered">
+      
+        <tr>
+          <th class="center">Image</th>
+          <th class="center">Name</th>
+          <th class="center">Description</th>
+          <th class="center">Owner</th>
+          <th class="center">City</th>
+      </tr>
+      
+      <% @businesses.each do |business| %>
+
+      <tr>
+        <th>
+          <%= link_to business do %>
+                <%= image_tag(business.image.url(:thumb), :class => "thumbs") %>
             <% end %>
-              <div class="caption">
-                <h3><%= business.title %></h3>
-              
-              </div>
-            </div>
-          </div>
+        </th>
 
-    	<% end %>
+        <th>
+          <h3><%= business.title %></h3>
+        </th>
+
+        <th>
+          <p><%= business.description %></p>
+        </th>
+
+        <th>
+          <strong><p><em>Owner:</em> <%= link_to business.user.profile.username, profile_path(current_user) %></p></strong>
+        </th>
+
+        <th>
+          <p> <%= business.city %></p>
+        </th>
+
+            
+      </tr>
+
+      <% end %> 
+      </table>
+     
     </div>
 </div>
 <div class="row">
