--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,65 +1,125 @@
-<div class="jumbotron">
-    <div class="container">
+<div class="row" id="pic_row">
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 60%">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png">
+    </div>
+
+    <div class="item" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png" >
+    </div>
+
+    <div class="item" align="center">
+      <img src="https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png" >
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<script type="text/javascript">
+  $(document).ready(function(){
+      // Activate Carousel
+      $("#myCarousel").carousel({interval: 5000});
+      
+      // Enable Carousel Indicators
+      $(".item1").click(function(){
+          $("#myCarousel").carousel(0);
+      });
+      $(".item2").click(function(){
+          $("#myCarousel").carousel(1);
+      });
+      $(".item3").click(function(){
+          $("#myCarousel").carousel(2);
+      });
+      $(".item4").click(function(){
+          $("#myCarousel").carousel(3);
+      });
+      
+      // Enable Carousel Controls
+      $(".left").click(function(){
+          $("#myCarousel").carousel("prev");
+      });
+      $(".right").click(function(){
+          $("#myCarousel").carousel("next");
+      });
+  });
+</script>
+</div>
+  
+
+<div class="row" style="margin-top: 3%;">
+      <div class="form-group">
+          <%= render 'search_form' %>
+      </div>
+</div>
+
+<div class="row" style="margin-top: 2%">
+    <div class="col-sm-6" >
+        <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Promote+Your+BusinessToday.png", :class => 'promo_a'), businesses_path, target: "_blank" %>
+    </div>
+    <div class="col-sm-6 " >
+        <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Cables.png", :class => 'promo_b'), new_product_path, target: "_blank" %>
     </div>
 </div>
 
-<div class="form-group">
-      <%= render 'search_form' %>
-    </div>
-<div class="center">
-  <div class="row">
+<hr>
 
+
+<div class="row">
+  <div class="col-md-12 center" align="center">
+    <h3><strong>Recent Products</strong></h3>
+  </div>
+</div>
+  
+  <div class="row" id="prod_row">
+    
       <div class="col-md-3">
-            <table>
-              <thead>
-                <tr>
-                  <th>Category</th>
-                  <th colspan="3"></th>
-                </tr>
-              </thead>
-
-              <tbody>
-                <% @categories.each do |category| %>
-                  <tr>
-                    <td><%= link_to(category.name, category) %></td>
-                  </tr>
-                <% end %>
-              </tbody>
-            </table>
+          <div class="list-group" style="margin-top: 4%">
+            <% @categories.each do |category| %>
+                <%= link_to(category.name, category, :class => "list-group-item") %>
+            <% end %>
+          </div>
       </div>
 
-
-      <div class="col-md-9">
+    <div id="t_backdrop">
+      <div class="col-md-9" id="thumbnail_p">
         <% @products.each do |product| %>
           <div class="col-md-3">
             <div class="thumbnail">
             <%= link_to product do %>
                <%= image_tag(product.image.url(:thumb), :class => "thumbs") %>
             <% end %>
-              <div class="caption">
+              <div class="caption" align="center">
                 <h3><%= product.title %></h3>
                 <p><%= number_to_currency(product.price) %></p>
-
-     
+                <p><%= link_to product.category.name %></p>
                
                 <p><em>Sold By:</em> <%= link_to product.user.profile.username, profile_path(current_user) %></p>
                 <p><em>Tags:<em> <%= raw product.tags.map(&:name).map { |t| link_to t, tag_path(t) }.join(', ') %></p>
               </div>
             </div>
           </div>
+          
         <% end %> 
       </div>
-  </div>
-      
-</div>  
-<div class="row">
-    <div class="col-md-3 col-md-offset-6">
-       
-    </div>
-</div>  
+    </div> 
+   <%= will_paginate @products, renderer: BootstrapPagination::Rails %> 
+ </div>     
 
-<div class="row">
-  <% if user_signed_in? %>
-    <%= link_to 'New product', new_product_path, class: "btn btn-link" %>
-  <% end %>
-</div>
+
