--- a/app/views/profiles/_form_new.html.erb
+++ b/app/views/profiles/_form_new.html.erb
@@ -66,6 +66,26 @@
         
         </div>
 
+        <script>
+            function checkCheckBox(f){
+            if (f.agree.checked == false )
+            {
+            alert('Please check the box to continue.');
+            return false;
+            }else
+            return true;
+            }
+        //-->
+        </script>
+
+        <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)">
+
+          <!--Enter your form contents here-->
+
+          <b>By submitting, I agree that all info entered was done accurately & truthfully. </b><br />
+          I accept: <input type="checkbox" value="0" name="agree">
+ 
+
 
         <div class="form-group">
           
