--- a/app/views/businesses/_search_form.html.erb
+++ b/app/views/businesses/_search_form.html.erb
@@ -1,13 +1,12 @@
-<%= search_form_for @search, url: search_businesses_path, method: :post do |f| %>
-  <%= f.condition_fields do |c| %>
-    <%= render "condition_fields", f: c %>
+  <%= search_form_for @w, html: { class: "form-group" } do |f| %>
+    
+    <div class="col-md-9 center" style="margin-left: 4%; margin-bottom: 5%" >
+      <%= f.search_field :title_or_description_or_address_or_city_or_email_cont, class: "form-control", placeholder: "Search..." %>
+    </div>
+
+    <div class="col-md-2" style="margin-left: 4%">
+      <%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub" %>
+    </div>    
+      
+    
   <% end %>
-  <p><%= link_to_add_fields "Add Conditions", f, :condition %></p>
-  <div class="field">
-    Sort:
-    <%= f.sort_fields do |s| %>
-      <%= s.sort_select %>
-    <% end %>
-  </div>
-  <div class="actions"><%= f.submit "Search" %></div>
-<% end %>
