--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,15 +1,42 @@
 <p id="notice"><%= notice %></p>
 
-<div class="form-group">
-      <%= render 'search_form' %>
+<div class="row" style="margin-top: 3%;">
+      <div class="form-group">
+          <%= render 'search_form' %>
+      </div>
 </div>
 
 <div class="row">
 	<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
 </div>
-<div class="usa" id="map"></div>
 
-<div class="col-md-8">
+<div class="row">
+	<div class="usa" id="map"></div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
+		<%= form_tag businesses_path, method: 'get' do %>
+			<div class="col-md-4 form-group">
+				<%= label_tag :business_category %>
+			  	<%= select_tag(:business_category, options_from_collection_for_select(BusinessCategory.all, :id, :name, params[:business_category]), { include_blank: true }) %>
+			</div>
+			<div class="col-md-4 form-group">
+				<%= label_tag :state %>
+			  	<%= select_tag(:state, options_from_collection_for_select(State.all, :id, :name, params[:state]), { include_blank: true }) %>
+			</div>
+
+			 <%= submit_tag "submit", :name => nil, :class => "btn btn-primary" %>      
+		<% end %>
+	</div>
+
+</div>
+
+
+
+
+<div class="row">
+	<div class="col-md-12" align="center">
 	  	<table class="table table-striped table-bordered">
 			
 	  		<tr>
@@ -52,10 +79,16 @@
 	  	</table>
 	   
 	  </div>
+</div>
+
+
 	
 
 <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
 <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 
-
+<div class="row">
+  <% if user_signed_in? %>
 	<%= link_to 'Add Your Business', new_business_path %>
+  <% end %>
+</div>
