--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,7 @@
-<h1>Contact Us</h1>
+<div class="row" style="margin-top: 5% ">
+	<div class="col-md-12" align="center">
+		<h1>Contact Us</h1>
+	</div>
+</div>
 <p>Email: TBWIGstores@gmail.com</p>
 
