--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-   <a class="navbar-brand" href="/"><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/marketnew/assets/image.png", :class => 'navlogo'), root_path %></a>
+
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -25,16 +25,15 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "View Profile", profile_path(current_user) %></li>
-            <li><%= link_to "Manage Listings", vendor_path %></li>
-            <li><%= link_to "Sales History", sales_path %></li>
+            <li><a href="https://dashboard.stripe.com/" target="_blank">Manage Sales</a></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.profile.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Purchase History", purchases_path %></li>
-            <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
+            <li><%= link_to "Edit Profile", edit_profile_path(current_user) %></li>
+            <li><%= link_to "Edit Account", edit_user_registration_path %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
