--- a/app/views/products/_search_form.html.erb
+++ b/app/views/products/_search_form.html.erb
@@ -1,19 +1,15 @@
-<div class="row center">
 	<%= search_form_for @q, html: { class: "form-group" } do |f| %>
-		<div class="col-md-8 offset-md-3" style="margin-left: 15%">
-			
-			
+		
+		<div class="col-md-9 center" style="margin-left: 4%; margin-bottom: 5%" >
 			<%= f.search_field :title_or_description_cont, class: "form-control", placeholder: "Search..." %>
+		</div>
 
+		<div class="col-md-2" style="margin-left: 4%">
+			<%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub" %>
+		</div>		
 			
 		
-		</div>
-		<div >
-			<%= submit_tag 'Search', name: nil, class: 'btn btn-primary' %>
-		</div>
 	<% end %>
 
-</div>
-	
 	
 	
