--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,123 +1,130 @@
 <p id="notice"><%= notice %></p>
 
 <div class="container">
-  <div class="row mt-5">
-    <div class="col d-flex justify-content-center">
-      <div class="image-cropper">
-        <%= image_tag @profile.avatar.url(:thumb), class: "profile-pic" %>
+  <div class="row" style="margin-top: 7%;">
+   
+      <div class="col-md-7" align="center">
+        <%= image_tag @profile.avatar.url(:thumb), id: "profile_pic" %>
+        <h2>Hey <%= @profile.username %>!<h2>
       </div>
-    </div>
+
+      <div class="col-md-5" align="center">
+            <div class="col d-flex justify-content-center">
+              <div class="row">
+                <div class="col text-center pt-3">
+                  <h4 class="font-weight-bold font-heading mb-3">Bio</h4>
+                  <p class="font-small"><%= @profile.bio %></p>
+                </div>
+              </div>
+            </div>
+      </div>
+        
+      
+   
   </div>
 
 
-  <div class="row pt-3">
-    <div class="col d-flex justify-content-center font-heading font-medium">
-        <h2>Hey! <%= @profile.username %><h2>
-    </div>
-  </div>
 
   <!-- if current user show "connect with stripe button, otherwise show "message reader" button -->
  
-    <% if @profile.user.uid == !present? %>
-      
 
-      <% if @profile.user.id == current_user.id %>
-        <div class="panel panel-default">
-          <div class="panel-header text-center">
-            <h4>
-              You wont be able to sell items until you register with Stripe!
-            </h4>
-          </div>
-          <div class="panel-body text-center">
-            <%= link_to 'Connect', stripe_url, class: 'btn btn-lg btn-info', target: '_blank' %>
-          </div>
-        </div>
-      <% end %> 
 
-       
-    <% else %>
-        
-        <div> Message me </div>
-    
-  <% end %>
-  <div class="container bg-white border-grey p-4">
-    <div class="row">
-      <div class="col d-flex justify-content-center">
-        <div class="row">
-          <div class="col text-center">
-            <h4 class="font-weight-bold font-heading mb-3">Name</h4>
-            <p class="font-small"><%= @profile.first_name + " " + @profile.last_name %></p>
+<div class="row" style="margin-top: 5%">
+  <!-- ################# Business ################# -->
+    <% if @profile.user.id == current_user.id %>
+      <h3 class="font-heading text-center">My Business</h3>
+      <% else %>
+      <h3 class="font-heading text-center"><%= @profile.username %>'s Business</h3>
+    <% end %>
+
+    <% @businesses.each do |business| %>
+      <% if business.user.id == @profile.user.id %>
+
+          <div class="col-md-12" align="center">
+            <%= image_tag business.image.url(:medium), class: "product-overview-image" %>
+                <h4 class="font-heading pt-2">
+                  <%= business.title %>
+                </h4>
+            <%= link_to "View Details", business, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
+              <div class="btn-group">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                  Action <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                  <li><%= link_to "View", business, class: "btn btn-link" %></li>
+                  <li><%= link_to "Edit", edit_business_path(business), class: "btn btn-link" %></li>
+                  <li><%= link_to 'Destroy', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link" %></li>
+                </ul>
+              </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col d-flex justify-content-center">
-        <div class="row">
-          <div class="col text-center pt-3">
-            <h4 class="font-weight-bold font-heading mb-3">Bio</h4>
-            <p class="font-small"><%= @profile.bio %></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+              
+      <% end %>
+    <% end %>
 </div>
 
-<!-- ################# Products ################# -->
-<% if @profile.user.id == current_user.id %>
-  <h3 class="font-heading text-center">My Business</h3>
-  <% else %>
-  <h3 class="font-heading text-center"><%= @profile.username %>'s Business</h3>
-<% end %>
+<div class="row" style="margin-top: 5%">
+  <!-- ################# Products ################# -->
+    <% if @profile.user.id == current_user.id %>
+      <h3 class="font-heading text-center">My Products</h3>
+      <% else %>
+      <h3 class="font-heading text-center"><%= @profile.username %>'s Products</h3>
+    <% end %>
 
-<% @businesses.each do |business| %>
-  <% if business.user.id == @profile.user.id %>
-    <div class="container bg-white border-grey p-4">
-      <div class="col">
-        <div class="row">
-          <div class="col-6">
-            <%= image_tag business.image.url(:medium), class: "product-overview-image" %>
+        <% if @profile.user.uid != present? %>
+          
+
+          <% if @profile.user.id == current_user.id %>
+            <div class="panel panel-default">
+              <div class="panel-header text-center">
+                <h4>
+                  You wont be able to sell items until you register with Stripe!
+                </h4>
+              </div>
+              <div class="panel-body text-center">
+                <%= link_to 'Connect', stripe_url, class: 'btn btn-lg btn-info', target: '_blank' %>
+              </div>
+            </div>
+          <% end %> 
+
+           
+        <% else %>
+            
+            <div> Message me </div>
+        
+      <% end %>
+
+    <div id="t_backdrop">
+      <div class="col-md-9" id="thumbnail_p">
+        <% @products.each do |product| %>
+          <div class="col-md-3">
+            <div class="thumbnail">
+            <%= link_to product do %>
+               <%= image_tag(product.image.url(:thumb), :class => "thumbs") %>
+            <% end %>
+              <div class="caption" align="center">
+                <h3><%= product.title %></h3>
+                <p><%= number_to_currency(product.price) %></p>
+                <p><%= link_to product.category.name %></p>
+               
+                <p><em>Sold By:</em> <%= link_to product.user.profile.username, profile_path(current_user) %></p>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    Action <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><%= link_to "View", product, class: "btn btn-link" %></li>
+                    <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
+                    <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-6 text-center">
-            <h4 class="font-heading pt-2">
-              <%= business.title %>
-            </h4>
-
-            <%= link_to "View Details", business, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
-
-          </div>
-        </div>
+          
+        <% end %> 
       </div>
-    </div>
-  <% end %>
-<% end %>
+    </div> 
 
-<!-- ################# Products ################# -->
-<% if @profile.user.id == current_user.id %>
-  <h3 class="font-heading text-center">My Products</h3>
-  <% else %>
-  <h3 class="font-heading text-center"><%= @profile.username %>'s Books</h3>
-<% end %>
 
-<% @products.each do |product| %>
-  <% if product.user.id == @profile.user.id %>
-    <div class="container bg-white border-grey p-4">
-      <div class="col">
-        <div class="row">
-          <div class="col-6">
-            <%= image_tag product.image.url(:medium), class: "product-overview-image" %>
-          </div>
-          <div class="col-6 text-center">
-            <h4 class="font-heading pt-2">
-              <%= product.title %>
-            </h4>
+</div>
 
-            <%= link_to "View Details", product, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
-<% end %>
