--- a/app/views/states/show.html.erb
+++ b/app/views/states/show.html.erb
@@ -10,11 +10,31 @@
   <%= @state.name %>
 </h2>
 
-<%= form_tag('businesses', :remote => true) do %>
-  <%= select_tag "category", options_from_collection_for_select(BusinessCategory.all, "id", "name"),  { :include_blank => true , :class => "product_select"} %>
-  <%= submit_tag 'Filter' %>
+
+
+<%= form_tag businesses_path, method: 'get' do %>
+  <%= label_tag :business_category %>
+  <%= select_tag(:business_category, options_from_collection_for_select(BusinessCategory.all, :id, :name, params[:business_category]), { include_blank: true }) %><br>
+  <%= submit_tag "submit", :name => nil %>       
+      
 <% end %>
 
+
+<script type="text/javascript">
+    $(function() {
+
+      $('input[type=checkbox]').change(function(){
+        $.get($('#business_search').attr('action'),
+        $('#business_search').serialize(), null, 'script');
+        return false;
+      });
+
+      $('#business_search').submit(function () {
+        $.get(this.action, $(this).serialize(), null, 'script');
+        return false;
+      });
+    });
+</script>
     <div class="col-md-8">
       <table class="table table-striped table-bordered">
       
