--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -6,7 +6,7 @@
       </div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 3%">
 	<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
 </div>
 
@@ -14,7 +14,10 @@
 	<div class="usa" id="map"></div>
 </div>
 
-<div class="row">
+<div class="row" style="margin-top: 3%">
+	<div class="col-md-12" align="center">
+		<h3>Businesses</h3>
+	</div>
 	<div class="col-md-12">
 		<%= form_tag businesses_path, method: 'get' do %>
 			<div class="col-md-4 form-group">
