--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -70,10 +70,10 @@
 </div>
 
 <div class="row" style="margin-top: 2%">
-    <div class="col-sm-6" >
+    <div class="col-sm-6" style="margin-top: 1%">
         <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Promote+Your+BusinessToday.png", :class => 'promo_a'), businesses_path, target: "_blank" %>
     </div>
-    <div class="col-sm-6 " >
+    <div class="col-sm-6 " style="margin-top: 1%">
         <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/Cables.png", :class => 'promo_b'), new_product_path, target: "_blank" %>
     </div>
 </div>
