--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,20 @@
         <%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/image.png", :class => 'toplogo'), root_path %>
       </div>
       
+      <div class="col-md-12 center" align="center" style="margin-top: 1%">
+        <div class="footer-social-icons">
+            <ul class="social-icons">
+                <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+                <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+            </ul>
+        </div>
+      </div>
+
+      
     </div>
     
   	<%= render 'partials/navbar' %>
