--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -15,8 +15,8 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
       <li><%= link_to "Marketplace", products_path %></li>
-      <li><%= link_to "Black Businesses", businesses_path %></li>
-      <li><%= link_to "About", pages_about_path %></li>
+      <li><%= link_to "Black Business Services", businesses_path %></li>
+      <li><%= link_to "About Us", pages_about_path %></li>
       <li><%= link_to "Contact", pages_contact_path %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
