--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -3,6 +3,6 @@
 		<h1>Contact Us</h1>
 	</div>
 </div>
-<p>Email: TBWIGstores@gmail.com</p>
+<p>Email: Theblackwomanisgodstores@gmail.com</p>
 <p>Address: 340 S LEMON AVE #2792 WALNUT, CA 91789</p>
 
