--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -4,8 +4,8 @@
 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
           data-description="A month's subscription"
-          data-amount="1300">
+          data-amount="4999">
           	
 </script>
-<span> $13 per month, cancel at any time.</span>
+<span> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</span>
 <% end %>       
