--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-12 center" align="center">
     <div id="signup">
 
     <h2>Sign up</h2>
@@ -33,4 +34,5 @@
     <%= render "devise/shared/links" %>
     </div>
   </div>
+</div>
 </div>
