--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -30,6 +30,15 @@ You must not transmit any worms or viruses or any code of a destructive nature.
 
 A breach or violation of any of the Terms will result in an immediate termination of your Services.
 
+We ARE NOT responsible for any businesses or actions provided by any individual using this platform. 
+
+10% of all marketplace sales will be retained by the platform.
+
+All sellers are required to send tracking numbers per order within 48 hours of purchase. Sellers are also inclined to responsibly correspond with messages and inquiries from customers regarding purchases made on the platform.
+
+<strong>The Black Woman Is God Stores Acts solely as an intermediary between business owners and customers.
+We ARE NOT responsible for any businesses or actions by any individual using this platform. </strong> 
+
 <br>
 <br>
 SECTION 2 - GENERAL CONDITIONS
@@ -174,7 +183,18 @@ If in our sole judgment you fail, or we suspect that you have failed, to comply 
 
 <br>
 <br>
-SECTION 17 - ENTIRE AGREEMENT
+SECTION 17 - BLACK BUSINESS MAP AGREEMENT
+
+The monthly subscription fee for promotion of your business on the site is $49.99.
+Subscription fee's Can be changed at anytime based on our discretion.
+
+<strong>All Businesses who subscribe are presumed to be in good legal standing.</strong>
+
+Any reports or complaints concerning fraudulent or illegal behavior will result in termination of your account and subscription will not be refunded, <strong>LEGAL ACTION WILL BE TAKEN IF REQUIRED.</strong>
+
+<br>
+<br>
+SECTION 18 - ENTIRE AGREEMENT
 
 The failure of us to exercise or enforce any right or provision of these Terms of Service shall not constitute a waiver of such right or provision.
 
@@ -184,13 +204,13 @@ Any ambiguities in the interpretation of these Terms of Service shall not be con
 
 <br>
 <br>
-SECTION 18 - GOVERNING LAW
+SECTION  19- GOVERNING LAW
 
-These Terms of Service and any separate agreements whereby we provide you Services shall be governed by and construed in accordance with the laws of 130-36 inwood st, , NY, 11436, United States.
+These Terms of Service and any separate agreements whereby we provide you Services shall be governed by and construed in accordance with the laws of the United States of America.
 
 <br>
 <br>
-SECTION 19 - CHANGES TO TERMS OF SERVICE
+SECTION 20 - CHANGES TO TERMS OF SERVICE
 
 You can review the most current version of the Terms of Service at any time at this page.
 
@@ -198,7 +218,7 @@ We reserve the right, at our sole discretion, to update, change or replace any p
 
 <br>
 <br>
-SECTION 20 - CONTACT INFORMATION
+SECTION 21 - CONTACT INFORMATION
 
 Questions about the Terms of Service should be sent to us at Theblackwomanisgodstores@gmail.com.
 
