--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -2,8 +2,16 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3 panel panel-default form-style">
             <div class="panel-body">
-                <h2>Business Signup Step</h2>
-                <h4>This is the final step to give you full access to posting your business </h4>  
+                <h2><strong>Please Subscribe</strong> To post your business</h2>
+                <h3>This is the final step to give you full access to posting your business </h3> 
+                <h5>
+                	The monthly subscription fee for promotion of your business on the site is $49.99.
+Subscription fee's Can be changed at anytime based on our discretion.
+
+<strong>All Businesses who subscribe are presumed to be in good legal standing.</strong>
+
+Any reports or complaints concerning fraudulent or illegal behavior will result in termination of your account and subscription will not be refunded, <strong>LEGAL ACTION WILL BE TAKEN IF REQUIRED.</strong>
+                </h5>
                 <%= render 'form' %>
             </div>
         </div>
