production change 4(map)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-
+    <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
+    <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 
      
   </head>
