--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -11,7 +11,9 @@
 </div>
 
 <div class="row">
-	<div class="usa" id="map"></div>
+	<div class="col-md-12 center" align="center">
+		<div class="usa" id="map"></div>
+	</div>
 </div>
 
 <div class="row" style="margin-top: 3%">
