--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -212,6 +212,18 @@ ul.social-icons {
 .fa-linkedin:hover {
     background-color: #0073a4;
 }
+.fa-instagram {
+    padding:10px 14px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-instagram:hover {
+    background-color: pink;
+}
 .fa-google-plus {
     padding:10px 9px;
     -o-transition:.5s;
