production change 6(seed)

--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -88,11 +88,22 @@
           </div>
         </div> 
 
+          <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)">
+
+          <!--Enter your form contents here-->
+
+          <b>By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
+          I accept all terms and conditions: <input type="checkbox" value="0" name="agree">
+
+          </form>
+
         <div class="actions row mt-5 mb-3">
           <div class="col d-flex justify-content-center">
             <%= form.submit %>
           </div>
         </div>
+
+
 
         <script>
             function checkCheckBox(f){
@@ -106,14 +117,7 @@
         //-->
         </script>
 
-        <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)">
 
-          <!--Enter your form contents here-->
-
-          <b>By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
-          I accept: <input type="checkbox" value="0" name="agree">
-
-          </form>
 
 
       <% end %>
