--- a/app/views/profiles/_form_new.html.erb
+++ b/app/views/profiles/_form_new.html.erb
@@ -83,7 +83,7 @@
           <!--Enter your form contents here-->
 
           <b>By submitting, I agree that all info entered was done accurately & truthfully. </b><br />
-          I accept: <input type="checkbox" value="0" name="agree">
+          I accept All terms and conditions: <input type="checkbox" value="0" name="agree">
  
 
 
